# cookiesamurai

./: cookiecutter.json  pyproject.toml  setup.py
src/cookiesamurai/: main.py
